<resources>
    <!-- Title/menu description -->
    <string name="app_name">Poche</string>
    <string name="action_configuration">Configuration</string>
    <string name="title_activity_config">Configuration</string>

    <!-- Fallback/info messages -->
    <string name="main_noartist">No artist information</string>
    <string name="no_playlist">No playlist available.\nPut *.m3u files in /Poche directory.</string>

    <!-- Error messages -->
    <string name="toast_fail_parseplaylist">There\'re some problems with playlist file!</string>

    <!-- Strings related to Configurations -->
    <string name="pref_key_playorder">PLAYORDER</string>
    <string name="pref_key_strokeorientation">STROKEORIENTATION</string>
    <string name="pref_key_strokepull">STROKEPULL</string>
    <string name="pref_key_wakelock">WAKELOCK</string>

    <string name="pref_playorder">Play order</string>
    <string-array name="pref_playorder_summary">
        <item>Ordered</item>
        <item>Shuffle</item>
    </string-array>
    <string-array name="pref_playorder_values">
        <item>ORDERED</item>
        <item>SHUFFLE</item>
    </string-array>

    <string name="pref_strokeorientation">Swipe orientation</string>
    <string-array name="pref_strokeorientation_summary">
        <item>Rotate by 0</item>
        <item>Rotate by 90</item>
        <item>Rotate by 180</item>
        <item>Rotate by 270</item>
    </string-array>
    <string-array name="pref_strokeorientation_values">
        <item>NORTH</item>
        <item>EAST</item>
        <item>SOUTH</item>
        <item>WEST</item>
    </string-array>

    <string name="pref_wakelock">Wake lock</string>

    <string name="pref_strokepull_summary">Pull to swipe horizontally</string>

</resources>
