<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="@string/pref_key_playorder"
        android:title="@string/pref_playorder"
        android:entries="@array/pref_playorder_summary"
        android:entryValues="@array/pref_playorder_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"/>

    <ListPreference
        android:key="@string/pref_key_strokeorientation"
        android:title="@string/pref_strokeorientation"
        android:entries="@array/pref_strokeorientation_summary"
        android:entryValues="@array/pref_strokeorientation_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"/>

    <SwitchPreference
        android:key="@string/pref_key_strokepull"
        android:title="@string/pref_strokepull_summary"/>

    <SwitchPreference
        android:key="@string/pref_key_wakelock"
        android:title="@string/pref_wakelock"/>

</PreferenceScreen>
